--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,17 @@ input {
 img {
 	max-width: 300px;
 }
+
+.flex-container {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	height: 300px;
+}
+  
+.flex-container > div {
+	margin: 5px;
+	padding: 10px;
+	border-style: solid;
+	border-width: 1px;
+}
